--- a/doc/references.bib
+++ b/doc/references.bib
@@ -36,3 +36,24 @@ year = {2016},
 address = {San Francisco, CA},
 month = {December}
 }
+
+@Article{Barfoot:2011,
+author = {Timothy Barfoot and James R. Forbes and Paul T. Furgale},
+title = {{Pose Estimation Using Linearized Rotations and Quaternion Algebra}},
+journal = {Acta Astronautica},
+year = {2011},
+volume = {68},
+pages = {101-112}
+}
+
+@Book{Wie:2008,
+author = {Bong Wie},
+title = {{Space Vehicle Dynamics and Control}},
+publisher = {American Institute of Aeronautics and Astonautics, Inc.},
+year = {2008},
+series = {Education Series},
+address = {Reston, VA},
+edition = {Second}
+}
+
+
