--- a/doc/references.bib
+++ b/doc/references.bib
@@ -56,4 +56,148 @@ address = {Reston, VA},
 edition = {Second}
 }
 
+@article{Li:2013,
+author = {Mingyang Li and Anastasios I. Mourikis},
+title = {High-precision, consistent EKF-based visual-inertial odometry},
+journal = {The International Journal of Robotics Research},
+volume = {32},
+number = {6},
+pages = {690-711},
+year = {2013},
+doi = {10.1177/0278364913481251},
+URL = {http://dx.doi.org/10.1177/0278364913481251},
+eprint = {http://dx.doi.org/10.1177/0278364913481251}
+}
+
+@ARTICLE{Artal:2017,
+author={R. Mur-Artal and J. D. Tardós},
+journal={IEEE Robotics and Automation Letters},
+title={Visual-Inertial Monocular SLAM With Map Reuse},
+year={2017},
+volume={2},
+number={2},
+pages={796-803},
+keywords={SLAM (robots);cameras;robot vision;IMU initialization method;accelerometer;camera configuration;gyroscope;map reuse;micro-aerial vehicle public dataset;monocular camera;sensor incremental motion;trajectory estimation;visual-inertial monocular SLAM;visual-inertial odometry;visual-inertial simultaneous localization;zero-drift localization;Accelerometers;Cameras;Gravity;Optimization;Simultaneous localization and mapping;Tracking loops;SLAM;Sensor fusion;visual-based navigation},
+doi={10.1109/LRA.2017.2653359},
+ISSN={2377-3766},
+month={April}
+}
+
+@ARTICLE{Hesch:2014,
+author={J. A. Hesch and D. G. Kottas and S. L. Bowman and S. I. Roumeliotis},
+journal={IEEE Transactions on Robotics},
+title={Consistency Analysis and Improvement of Vision-aided Inertial Navigation},
+year={2014},
+volume={30},
+number={1},
+pages={158-176},
+keywords={Kalman filters;distance measurement;estimation theory;inertial navigation;observability;MSC-KF;V-SLAM;VINS;consistency analysis;estimation errors;estimator inconsistency;mapping;multistate constraint Kalman filter;spurious information gain;system observability;unobservable directions;vision-aided inertial navigation systems;visual simultaneous localization;visual-inertial odometry;Analytical models;Cameras;Jacobian matrices;Observability;Robot sensing systems;Vectors;Visualization;Consistency;nonlinear estimation;observability analysis;vision-aided inertial navigation},
+doi={10.1109/TRO.2013.2277549},
+ISSN={1552-3098},
+month={Feb}
+}
+
+@ARTICLE{Mirzaei:2008,
+author={F. M. Mirzaei and S. I. Roumeliotis},
+journal={IEEE Transactions on Robotics},
+title={A Kalman Filter-Based Algorithm for IMU-Camera Calibration: Observability Analysis and Performance Evaluation},
+year={2008},
+volume={24},
+number={5},
+pages={1143-1156},
+keywords={Kalman filters;calibration;computer vision;image sensors;inertial navigation;observability;state estimation;Kalman filter-based algorithm;inertial measurement unit;observability analysis;observability rank criterion;performance evaluation;vision-aided inertial navigation systems;Extended Kalman filter;Lie derivatives;inertial measurement unit (IMU)-camera calibration;observability of nonlinear systems;vision-aided inertial navigation},
+doi={10.1109/TRO.2008.2004486},
+ISSN={1552-3098},
+month={Oct}
+}
+
+@article{Kelly:2011,
+author = {Jonathan Kelly and Gaurav S Sukhatme},
+title = {Visual-Inertial Sensor Fusion: Localization, Mapping and Sensor-to-Sensor Self-calibration},
+journal = {The International Journal of Robotics Research},
+volume = {30},
+number = {1},
+pages = {56-79},
+year = {2011},
+doi = {10.1177/0278364910382802},
+URL = {http://dx.doi.org/10.1177/0278364910382802},
+eprint = {http://dx.doi.org/10.1177/0278364910382802}
+}
+
+
+@article{Keivan:2015,
+author = {Nima Keivan and Gabe Sibley},
+title = {Asynchronous adaptive conditioning for visual–inertial SLAM},
+journal = {The International Journal of Robotics Research},
+volume = {34},
+number = {13},
+pages = {1573-1589},
+year = {2015},
+doi = {10.1177/0278364915602544},
+URL = {http://dx.doi.org/10.1177/0278364915602544},
+eprint = {http://dx.doi.org/10.1177/0278364915602544}
+}
+
+@article{Jones:2011,
+author = {Eagle S. Jones and Stefano Soatto},
+title = {Visual-inertial navigation, mapping and localization: A scalable real-time causal approach},
+journal = {The International Journal of Robotics Research},
+volume = {30},
+number = {4},
+pages = {407-430},
+year = {2011},
+doi = {10.1177/0278364910388963},
+URL = {http://dx.doi.org/10.1177/0278364910388963},
+eprint = {http://dx.doi.org/10.1177/0278364910388963}
+}
+
+@Book{SavageP1:2007,
+author = {Paul G. Savage},
+title = {Strapdown Analytics},
+publisher = {Strapdown Associates, Inc.},
+year = {2007},
+volume = {1},
+address = {Maple Plain, MN},
+edition = {Second}
+}
+
+@Book{SavageP2:2007,
+author = {Paul G. Savage},
+title = {Strapdown Analytics},
+publisher = {Strapdown Associates, Inc.},
+year = {2007},
+volume = {2},
+address = {Maple Plain, MN},
+edition = {Second}
+}
+
+@Book{Titterton:2004,
+author = {David Titterton and John Weston},
+title = {Strapdown Inertial Navigation Technology},
+publisher = {The Institution of Engineering and Technology},
+year = {2004},
+volume = {17},
+series = {IET Radar, Sonar, Navigation and Avionics},
+address = {Reston, VA},
+edition = {Second}
+}
+
+@Article{Burri:2016,
+author = {Michael Burri and Janosch Nikolic and Pascal Gohl and Thomas Schneider and Joern Rehder and Sammy Omari and Markus W Achtelik and Roland Siegwart},
+title = {The EuRoC micro aerial vehicle datasets},
+journal = {The International Journal of Robotics Research},
+year = {2016},
+volume = {35},
+number = {10},
+pages = {1157-1163}
+}
+
+@TechReport{Savage:2009,
+author = {Paul G. Savage},
+title = {Performance Analysis of Strapdown Systems},
+institution = {NATO Science and Technology Organization},
+year = {2009},
+number = {RTO-EN-SET-116-2009-10},
+month = {March}
+}
 
