--- a/doc/references.bib
+++ b/doc/references.bib
@@ -92,3 +92,46 @@
 	address = {4-192 EE/CS Building, 200 Union St. S.E., Minneapolis, MN 55455},
 	month = {March}
 }
+
+@ARTICLE{Forster:2017,
+author={C. Forster and L. Carlone and F. Dellaert and D. Scaramuzza},
+journal={IEEE Transactions on Robotics},
+title={{On-Manifold Preintegration for Real-Time Visual--Inertial Odometry}},
+year={2017},
+volume={33},
+number={1},
+pages={1-21},
+doi={10.1109/TRO.2016.2597321},
+ISSN={1552-3098},
+month={Feb}
+}
+
+@INPROCEEDINGS{Forster:2015, 
+    AUTHOR    = {Christian Forster AND Luca Carlone AND Frank Dellaert AND Davide Scaramuzza}, 
+    TITLE     = {{IMU Preintegration on Manifold for Efficient Visual-Inertial Maximum-a-Posteriori Estimation}}, 
+    BOOKTITLE = {Proceedings of Robotics: Science and Systems}, 
+    YEAR      = {2015}, 
+    ADDRESS   = {Rome, Italy}, 
+    MONTH     = {July},
+    DOI       = {10.15607/RSS.2015.XI.006} 
+} 
+
+@InProceedings{Eckenhoff:2016,
+author = {Kevin Eckenhoff and Patrick Geneva and Guoquan Huang},
+title = {{High-Accuracy Preintegration for Visual-Inertial Navigation}},
+booktitle = {Proceedings of Workshop on the Algorithmic Foundations of Robotics},
+year = {2016},
+address = {San Francisco, CA},
+month = {Dec}
+}
+
+@Article{Shuster:1993,
+author = {Malcolm D. Shuster},
+title = {{A Survey of Attitude Representations}},
+journal = {Journal of the Astonautical Sciences},
+year = {1993},
+volume = {41},
+number = {4},
+pages = {439-517},
+month = {Oct}
+}
